# data

./: .copilot-instructions.md  .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DOCKER_PRODUCTION_SUMMARY.md  DOCKER_README.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.simple  LICENSE  MODERN_SETUP.md  Makefile  QUICKSTART.md  README.md  badge_progress.json  challenge1_output.txt  check_level6.py  config.py  data-science-sandbox.code-workspace  demo_enhanced_gamification.py  demo_modern_toolchain.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  level_7_challenge_1_runner.py  level_7_challenge_3_realtime_runner.py  level_7_challenge_4_ethics_runner.py  level_7_master_runner.py  main.py  model_monitoring.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  (+2 more)
.copilot/: README.md
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: .copilot-instructions.md
.github/workflows/: ci.yml  security.yml  ui-tests.yml
apps/: README.md  streamlit_app_enhanced.py  streamlit_app_modern.py
challenges/level_1/: challenge_1_first_steps.md  challenge_2_visualization.md  challenge_3_data_types.md  challenge_4_aggregation.md
challenges/level_2/: challenge_1_advanced_cleaning.md  challenge_2_statistical_analysis.md  challenge_3_data_cleaning.md  challenge_4_data_validation.md
challenges/level_3/: challenge_1_visualization_mastery.md  challenge_1_visualization_mastery.py  challenge_2_interactive_dashboards.md  challenge_2_interactive_dashboards.py  challenge_3_advanced_plotting.md  challenge_3_advanced_plotting.py  challenge_4_storytelling_with_data.md  challenge_4_storytelling_with_data.py
challenges/level_4/: capstone_challenge.md  challenge_1_first_ml_models.md  challenge_1_first_ml_models.py  challenge_2_feature_engineering.md  challenge_2_feature_engineering.py  challenge_3_model_evaluation.md  challenge_3_model_evaluation.py  challenge_4_hyperparameter_tuning.md  challenge_4_hyperparameter_tuning.py
challenges/level_5/: challenge_1_advanced_algorithms.md  challenge_1_advanced_algorithms.py  challenge_1_advanced_ml_deep_learning.md  challenge_1_neural_network_fundamentals.py  challenge_2_convolutional_networks.py  challenge_2_deep_learning.md  challenge_2_deep_learning.py  challenge_3_advanced_feature_engineering.md  challenge_3_advanced_feature_engineering.py  challenge_3_recurrent_networks.py  challenge_4_advanced_architectures.py  challenge_4_production_ml_systems.md  challenge_4_production_ml_systems.py  level_5_runner.py
challenges/level_6/: challenge_1_capstone_project.md  challenge_1_time_series_analysis.md  challenge_1_time_series_analysis.py  challenge_2_anomaly_detection.md  challenge_2_anomaly_detection.py  challenge_2_nlp_text_analytics.md  challenge_3_computer_vision.md  challenge_3_nlp_text_analytics.py  challenge_3_recommendation_systems.md  challenge_4_advanced_statistics.md  challenge_4_capstone_project.md  challenge_4_computer_vision.py  challenge_5_recommendation_systems.py  challenge_6_advanced_statistics.py
challenges/level_7/: challenge_1_end_to_end_project.md  challenge_1_modern_toolchain.md  challenge_2_advanced_mlops.md  challenge_3_realtime_analytics.md  challenge_4_ai_ethics_governance.md
data/: generate_datasets.py  generate_level2_datasets.py
data/datasets/: customer_survey_data.csv  ecommerce_analytics.csv  messy_sales_data.csv  sample_sales.csv  simple_data.csv
docker/: nginx.conf
docs/: API.md  ARCHITECTURE.md  CODE_QUALITY.md  COMPLETION_SUMMARY.md  DASHBOARD_ENHANCEMENTS_IMPLEMENTED.md  DASHBOARD_ENHANCEMENT_PLAN.md  DASHBOARD_LINTING_FIXES_SUMMARY.md  DEVELOPMENT.md  DOCKER_DEPLOYMENT.md  ENHANCED_GAMIFICATION_IMPLEMENTATION.md  INTEGRATION_TESTING.md  IOS_HIG_IMPLEMENTATION.md  LEVEL_1_ENHANCEMENT_PLAN.md  LEVEL_3_TO_6_POLISH_COMPLETE.md  LEVEL_6_COMPLETION_SUMMARY.md  LEVEL_7_CHALLENGE_4_IMPLEMENTATION.md  MERMAID.md  MODERN_SETUP.md  PHASE_2_ENHANCED_GAMIFICATION_COMPLETE.md  PROFESSIONAL_REDESIGN_SUMMARY.md  PROJECT_SUMMARY.md  README.md  SETUP.md  UI_TESTING.md  getting-started.md
docs/diagrams/: architecture.mmd  data-pipeline.mmd  game-flow.mmd  learning-path.mmd  ml-tracking.mmd
docs/implementation/: README.md  UI_TESTING_IMPLEMENTATION.md
docs/level-summaries/: LEVEL_1_ENHANCEMENTS_COMPLETE.md  LEVEL_1_FIXES_COMPLETE.md  LEVEL_2_SUMMARY.md  LEVEL_3_IMPLEMENTATION_COMPLETE.md  LEVEL_3_POLISH_COMPLETE.md  LEVEL_4_COMPLETION_SUMMARY.md  LEVEL_5_COMPLETION_SUMMARY.md  LEVEL_7_COMPLETION_MASTER.md  README.md
docs/project-management/: GAMIFICATION_SUCCESS_SUMMARY.md  NEXT_ACTIONS.md  ORGANIZATION_SUMMARY.md  PROJECT_COMPLETION_PLAN.md  README.md
examples/: README.md  demo_enhanced_gamification.py  demo_modern_toolchain.py  demo_production.py
mlruns/108825165048485891/: meta.yaml
mlruns/645667786962885752/: meta.yaml
mlruns/795027035318758686/: meta.yaml
model_registry/: models.json
notebooks/beginner/: level_1_data_explorer.ipynb
results/: level_7_challenge_4_results.json  level_7_master_results.json
runners/: README.md  level_7_challenge_1_runner.py  level_7_challenge_2_mlops_runner.py  level_7_completion_summary.py
sandbox/achievements/: challenge_validator.py  enhanced_badge_system.py
sandbox/analytics/: progress_analytics.py
sandbox/core/: badge_manager.py  challenge_loader.py  dashboard.py  enhanced_game_engine.py  game_engine.py
sandbox/integrations/: __init__.py  data_pipeline_builder.py  hyperparameter_tuning.py  ml_experiment_tracking.py  (+2 more)
scripts/: build-mermaid-diagrams.js  deploy-prod.bat  deploy-prod.ps1  deploy-prod.sh  deploy.sh  dev-setup.sh  maintenance.sh  setup.sh  test.sh  validate_config.py
tests/: __init__.py  conftest.py  test_comprehensive.py  test_gamification.py  test_level_1_fixes.py  test_level_3_polish.py  test_level_4_completion.py  test_level_5_completion.py  test_level_6_completion.py  test_level_7_completion.py
(+231 files in other folders)
